# critterpedia-optimizer

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  active_hours.cpp  active_hours.hpp  active_months.cpp  active_months.hpp  main.cpp
test/: CMakeLists.txt  test_active_hours.cpp  test_active_months.cpp
